implement basic watch_ajax support

--- a/templates/2006L/watch.twig
+++ b/templates/2006L/watch.twig
@@ -28,17 +28,17 @@
 	
 	
 	function showRelatedVideosContent() {
-		getAndShowNavContent('exRelated', '/watch_ajax?video_id=dMH0bHeiRNg&action_get_related_videos_component&search=Dancing%20comedy');
+		getAndShowNavContent('exRelated', '/watch_ajax.php?video_id=dMH0bHeiRNg&action_get_related_videos_component&search=Dancing%20comedy');
 	}
 	
 	function showRelatedPlaylistContent() {
-		getAndShowNavContent('exPlaylist', '/watch_ajax?feature=PlayList&video_id=dMH0bHeiRNg&action_get_related_playlist_component&p=&index=0');
+		getAndShowNavContent('exPlaylist', '/watch_ajax.php?feature=PlayList&video_id=dMH0bHeiRNg&action_get_related_playlist_component&p=&index=0');
 	}
 	function showRelatedUserContent() {
-		getAndShowNavContent('exUser', '/watch_ajax?video_id=dMH0bHeiRNg&action_get_user_videos_component&user_id=K9y5CeIv4CI&video_count=3');
+		getAndShowNavContent('exUser', '/watch_ajax.php?video_id=dMH0bHeiRNg&action_get_user_videos_component&user_id=K9y5CeIv4CI&video_count=3');
 	}
 	function showHonorsContent() {
-		getAndShowNavContent('honors', '/watch_ajax?v=dMH0bHeiRNg&action_get_honors=1&l=EN');
+		getAndShowNavContent('honors', '/watch_ajax.php?v=dMH0bHeiRNg&action_get_honors=1&l=EN');
 	}
 	
 	function showAllQueuedVideos() {
