--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -20,16 +20,16 @@
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/common.js"></script>
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-	<link rel="manifest" href="/assets/site.webmanifest">
-	<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#0a63b3">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0065d8">
 	<meta name="apple-mobile-web-app-title" content="squareBracket">
 	<meta name="application-name" content="squareBracket">
-	<meta name="msapplication-TileColor" content="#0a63b3">
-	<meta name="msapplication-TileImage" content="/assets/mstile-144x144.png">
-	<meta name="theme-color" content="#0a63b3">
+	<meta name="msapplication-TileColor" content="#2d89ef">
+	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+	<meta name="theme-color" content="#0065d8">
 	<title>{% block title %}{% endblock %} - squareBracket</title>
 </head>
 <body>
