redo most of the colors

--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -1,25 +1,26 @@
 $white: #fff;
-$gray-100: #e3e3e3;
-$gray-200: #cfcfcf;
-$gray-300: #c2c2c2;
-$gray-400: #b8b8b8;
-$gray-500: #969696;
-$gray-600: #808080;
-$gray-700: #666666;
-$gray-800: #4f4f4f;
-$gray-900: #303030;
+$gray-100: #F9F9F9;
+$gray-200: #ECECEC;
+$gray-300: #E2E2E2;
+$gray-400: #D3D3D3;
+$gray-500: #B4B4B4;
+$gray-700: #4F4F4F;
+$gray-800: #393939;
+$gray-900: #242424;
 $black: #000;
 $indigo: #371cd4;
 $purple: #523bb8;
 $pink: #eb46a9;
 $orange: #e6a417;
-$yellow: #f5cc18;
-$blue: #337ab7;
-$poktube-blue: #0054B6;
+$yellow: #ebbc15;
+$cyan: #16b6f5;
+$blue: #2b68ad;
+$green: #147a3a;
+$poktube-blue: #0051b3;
 $teal: #20c997;
 $dark: $gray-800;
 $enable-responsive-font-sizes: true;
-$secondary: $gray-300;
+$secondary: $gray-200;
 $enable-hover-media-query: true;
 $enable-shadows: true;
 $link-decoration: none;
