redo admin panel's design

--- a/templates/2006L/components/ajaxsidebar.twig
+++ b/templates/2006L/components/ajaxsidebar.twig
@@ -9,6 +9,7 @@
 	{% elseif type == 1 %}
 		<tr>
 			<td class="label">Playlists containing this video</td>
+			<div class="errorBox">playlists aren't implemented on squarebracket</div>
 		</tr>
 		</table>
 		<div id="plList" class="exploreContent">
