bhief's criticism is helpful
"ugly dropdown, theme is vague"
Changed the icon for theme and made the string less vague.

"why do you need "alpha 3.5" here (redundancy) / just add the version at the foote ror some shit"
Moved the version number to the footer.

"inconsistent + stretched out logo / why is this so big"
Redid the login screen, this time without the huge text.

"why does the comment section have no padding/background unlike all the other places"
Visually redo the comment sections. There's still some shitty gap that I'll fix later.

--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -6,7 +6,7 @@
 	<div class="col-xl-8">
 			<div class="row">
 			<div class="col-8">
-			<h3>{{ __("New from squareBracket") }} <small>(Alpha 3.5)</small></h3>
+			<h3>{{ __("Recently uploaded to squareBracket") }}</h3>
 			</div><div class="col-4">
 			<div class="text-end"><a href="browse.php" class="btn btn-secondary btn-sm">More videos</a></div>
 			</div>
@@ -37,7 +37,7 @@
 			</div>
 		{% endif %}
 		<hr/>
-		<h3>{{ __("What's new?") }}</h3>
+		<h3>{{ __("News and updates") }}</h3>
 		<p>{{ __("If you have made an account on PokTube (the predecessor of squareBracket) from January 31st to April 24th 2021, then you can now sign onto squareBracket with your PokTube credentials.") }}</p>
 		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
 		<hr/>
