--- a/templates/default/_layout-login.twig
+++ b/templates/default/_layout-login.twig
@@ -10,6 +10,7 @@
 		{% else %}
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		{% endif %}
+	    <link rel="stylesheet" id="bootstrap_dashboard" href="bootstrap/signin.css" type="text/css">
 		<!-- jquery and bootstrap 5 javascript
 		(IMPORTANT: even though bootstrap 5 claims to no longer support jquery
 		we still need it for the settings dropdown menu)
@@ -30,27 +31,7 @@
 		<meta name="theme-color" content="#0a63b3">
 		<title>{% block title %}{% endblock %} - squareBracket</title>
 	</head>
-	<body>
-		<style>
-body {
-display: flex;
-align-items: center;
-padding-top: 40px;
-padding-bottom: 40px;
-}
-.form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
-}
-.god-is-dead {
-max-width: 500px;
-}
-.gamerappa-killed-the-render-star {
-width: 45%;
-}
-</style>
+	<body class="text-center">
 		{% block content %}{% endblock %}
 	</body>
 </html>
