--- a/templates/default/watch.twig
+++ b/templates/default/watch.twig
@@ -90,7 +90,7 @@
 		<div style="margin-top:5px">
 			<div class="card">
 				<div class="card-body">
-					<h4>{{ video.title }}</h4><hr/>
+					<h4>{{ video.title }}</h4><hr class="mt-2 mb-3"/>
 					<div class="row">
 						<div class="col-lg-9">
 							<div class="row">
@@ -119,20 +119,26 @@
 				</div>
 			</div>
 		</div> <!-- WATCH VIDEO BOX -->
-		<div style="margin-top:5px">
-			<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none"
+		<div class="mt-1">
+			<div id="comment"></div>
+				<div class="card">
+				<div class="card-body">
+				<h5>Comments</h5><hr class="mt-2 mb-3"/>
+							<textarea class="form-control mt-2 mb-3" id="commentContents" style="overflow:hidden;resize:none"
 			rows="3" placeholder="{% if logged_in %}{{ __("Enter comment here, Markdown can be used here.") }}{% else %}{{ __("Please sign in in order to comment.") }}{% endif %}"></textarea>
 			{% if logged_in %}<div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-top:5px;margin-bottom:15px">
+			<class=
 			<button id="{% if logged_in %}post{% endif %}" class="btn btn-primary {% if not logged_in %}disabled{% endif %}">
 			{{ icon('reply-fill', 16) }} 
 			{{ __("Send") }}
 			<div class="spinner-border spinner-border-sm d-none" id="commentPostingSpinner" role="status" aria-hidden="true"><span class="visually-hidden">Posting...</span></div>
 			</button>
 			</div>{% endif %}
-			<div id="comment"></div>
 				{% for comment in comments %}
 					{{ comment(comment) }}
 				{% endfor %}
+				</div>
+				</div>
 		</div>
 	</div>
 	<div class="col-lg-3">
