--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -64,10 +64,9 @@
 							<a href="#" id="openSettings" class="dropdown-toggle nav-link" data-bs-toggle="dropdown"
 								aria-expanded="false">
 								{% if logged_in %} <img src="{{ profile_image(current_user.username) }}"
-									alt="{{ current_user.username }}" class="rounded" width="36" height="36"
-									style="margin-top: 3px;"> {{ current_user.username }}
-								{% else %}<img src="/assets/profileguest.png" alt="Guest" class="rounded" width="36"
-									height="36" style="margin-top: 3px;"> {{ __("Not signed in") }}{% endif %}
+									alt="{{ current_user.username }}" class="rounded" width="40" height="40"> {{ current_user.username }}
+								{% else %}<img src="/assets/profileguest.png" alt="Guest" class="rounded" width="40"
+									height="40"> {{ __("Not signed in") }}{% endif %}
 							</a>
 						</li>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="mainMenu">
