--- a/templates/default/watch.twig
+++ b/templates/default/watch.twig
@@ -8,7 +8,7 @@
 	<meta property="og:image" content="{{ domain }}{{ video_thumbnail(video.video_id) }}">
 	<meta property="og:url" content="{{ page_url }}">
 	<meta property="twitter:title" content="{{ video.title }} - squareBracket">
-	<meta property="twitter:description" content="{{ data.descriptionlength > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
+	<meta property="twitter:description" content="{{ data.description|length > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
 	<meta property="twitter:image" content="{{ domain }}{{ video_thumbnail(video.video_id) }}">
 	<meta name="twitter:card" content="summary_large_image">
 	<script>video_id = '{{ video.video_id }}';</script>
