make buttons look more like bs3

--- a/bootstrap/_variables-classicish.scss
+++ b/bootstrap/_variables-classicish.scss
@@ -1,3 +1,8 @@
+$primary: #337ab7;
+$success: #5cb85c;
+$info: #5bc0de;
+$warning: #f0ad4e;
+$danger: #d9534f;
 $white: #fff;
 $gray-100: #F8F8F8;
 $gray-200: #EEEEEE;
