--- a/bootstrap/bs-classicish.scss
+++ b/bootstrap/bs-classicish.scss
@@ -1,2 +1,3 @@
 @import "bootstrap/_variables-classicish.scss";
 @import "vendor/twbs/bootstrap/scss/bootstrap.scss";
+@import "bootstrap/custom-classicish.scss";
