--- a/testing_new_css/main.css
+++ b/testing_new_css/main.css
@@ -21,7 +21,7 @@ body {
 
 @media only screen and (max-width: 1100px) {
     #header-links,#nav-links,#content {
-        padding: 0 8px 0 8px;
+        padding: 0 8px;
     }
 }
 
@@ -94,7 +94,7 @@ a:hover #header-logo {
     color: #999;
     text-decoration: none;
     box-sizing: border-box;
-    padding: 8px 5px 6px 5px;
+    padding: 8px 5px 6px;
 }
 
 .nav-link:hover {
@@ -132,7 +132,7 @@ a:hover #header-logo {
 .btn-grey {
     background: linear-gradient(to bottom,#fafafa 0,#dcdcdc 100%);
     color: rgb(85, 85, 85);
-    box-shadow: rgb(255, 255, 255) 0px 0px 1px inset;
+    box-shadow: rgb(255, 255, 255) 0 0 1px inset;
     border-color: #ccc #ccc #aaa;
     text-shadow: 0 1px 0 #fff;
 }
