Initial password reset functionality.
Right now, it is manual, and administrators can generate a password reset link that can be sent to the user needing a password reset.
This commit also cleans up some code in the login page and fixes the login alert to not be glitched to the far left.

--- a/templates/default/user.twig
+++ b/templates/default/user.twig
@@ -74,6 +74,14 @@
 					<dt class="col-sm-4">{{ __("Date Joined") }}</dt>
 					<dd class="col-sm-8">{{ user.joined | date('M j, Y') }}</dd>
 				</dl>
+				{% if current_user.powerlevel > 2 %}
+				<hr>
+				<h4>{{ __("Administrator Actions") }}</h4>
+				<hr>
+				<dl class="row">
+					<a href="resetpassword.php?grf={{ user.id }}">Generate password reset for user</a>
+				</dl>
+				{% endif %}
 			</div>
 		</div>
 	</div>
